--- a/DataCorner/TD/src/app/component/asset-management from/asset-management.component.html
+++ b/DataCorner/TD/src/app/component/asset-management from/asset-management.component.html
@@ -4,7 +4,7 @@
       <span class="material-icons">arrow_back</span>
     </button>
     <h2>Asset Form -</h2>
-    <h2>  {{ myForm.get('empName')?.value }}</h2>
+    <h2>  {{ myForm.get('assetNo')?.value }}</h2>
   </div>
   <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
     <div class="content">
